Revision history for Search::Elasticsearch::Async::Simple

0.04    0000-00-00
        - Fixed loading of fake Search::Elasticsearch::Role::Is_Async role with
          Moo < 1.004000.
        - Fixed processing of arguments in some API methods.
        - Fixed error processing in some API methods.
        - Added more tests.

0.03    2014-05-27
        - Improved support of Search::Elasticsearch::Role::Is_Async role if
          Search::Elasticsearch::Async not installed.
        - Improved namespace detecting for components in constructor, no
          difference with synchronous version now.
        - Added examples.
        - Improved tests.
        - Fixed some logging.

0.02    2014-05-22
        - Fixed failed tests.
        - Fixed support of perl 5.8.x.

0.01    2014-05-21
        - Initial public release.