@@ -1,7 +1,8 @@
 requires 'namespace::clean';
+requires 'parent';
 requires 'AnyEvent::HTTP';
 requires 'Module::Runtime'       => '0.012';
 requires 'Moo'                   => '1.004000';
 requires 'Package::Stash';
-requires 'Search::Elasticsearch' => '1.10';
+requires 'Search::Elasticsearch' => '1.20';
 requires 'Time::HiRes';
