@@ -1,6 +1,8 @@
 Revision history for Search::Elasticsearch::Async::Simple
 
+
 0.04    0000-00-00
+        - Bumped version Search::Elasticsearch 1.20.
         - Fixed loading of fake Search::Elasticsearch::Role::Is_Async role with
           Moo < 1.004000.
         - Fixed processing of arguments in some API methods.
